--- a/di-sample-apex-trigger/test/account/classes/AccountTriggerValidationTest.cls
+++ b/di-sample-apex-trigger/test/account/classes/AccountTriggerValidationTest.cls
@@ -5,67 +5,67 @@
 @isTest(SeeAllData=false)
 private class AccountTriggerValidationTest {
 
-  @testSetup static void setup() {
-    AccountTestUtils.insertAccounts();
-  }
+  // @testSetup static void setup() {
+  //   AccountTestUtils.insertAccounts();
+  // }
 
-  @isTest static void onBeforeInsertTest() {
-    Test.startTest();
-    AccountTestUtils.insertAccounts();
-    Test.stopTest();
-  }
+  // @isTest static void onBeforeInsertTest() {
+  //   Test.startTest();
+  //   AccountTestUtils.insertAccounts();
+  //   Test.stopTest();
+  // }
 
-  @isTest static void onBeforeUpdateTest() {
-    List<Account> accounts = AccountTestUtils.selectAccounts();
+  // @isTest static void onBeforeUpdateTest() {
+  //   List<Account> accounts = AccountTestUtils.selectAccounts();
 
-    Test.startTest();
-    AccountTestUtils.updateAccounts(accounts);
-    Test.stopTest();
-  }
+  //   Test.startTest();
+  //   AccountTestUtils.updateAccounts(accounts);
+  //   Test.stopTest();
+  // }
 
-  @isTest static void onBeforeDeleteTest() {
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
-    ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
+  // @isTest static void onBeforeDeleteTest() {
+  //   CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  //   ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
 
-    Test.startTest();
-    validation.onBeforeDelete();
-    Test.stopTest();
-  }
+  //   Test.startTest();
+  //   validation.onBeforeDelete();
+  //   Test.stopTest();
+  // }
 
-  @isTest static void onAfterInsertTest() {
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
-    ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
+  // @isTest static void onAfterInsertTest() {
+  //   CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  //   ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
 
-    Test.startTest();
-    validation.onAfterInsert();
-    Test.stopTest();
-  }
+  //   Test.startTest();
+  //   validation.onAfterInsert();
+  //   Test.stopTest();
+  // }
 
-  @isTest static void onAfterUpdateTest() {
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
-    ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
+  // @isTest static void onAfterUpdateTest() {
+  //   CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  //   ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
 
-    Test.startTest();
-    validation.onAfterUpdate();
-    Test.stopTest();
-  }
+  //   Test.startTest();
+  //   validation.onAfterUpdate();
+  //   Test.stopTest();
+  // }
 
-  @isTest static void onAfterDeleteTest() {
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
-    ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
+  // @isTest static void onAfterDeleteTest() {
+  //   CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  //   ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
 
-    Test.startTest();
-    validation.onAfterDelete();
-    Test.stopTest();
-  }
+  //   Test.startTest();
+  //   validation.onAfterDelete();
+  //   Test.stopTest();
+  // }
 
-  @isTest static void onAfterUndeleteTest() {
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
-    ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
+  // @isTest static void onAfterUndeleteTest() {
+  //   CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  //   ITriggerObserver validation = new AccountTriggerValidation().getTriggerObserver(handler);
 
-    Test.startTest();
-    validation.onAfterUndelete();
-    Test.stopTest();
-  }
+  //   Test.startTest();
+  //   validation.onAfterUndelete();
+  //   Test.stopTest();
+  // }
 
 }
