--- a/di-sample-apex-trigger/main/common/classes/CommonErrorUtils.cls
+++ b/di-sample-apex-trigger/main/common/classes/CommonErrorUtils.cls
@@ -1,6 +1,6 @@
 /***********************************
  * Name: CommonErrorUtils.cls
- * Description: Utilities for Error
+ * Description: Utilities class of Error
  ***********************************/
 public without sharing class CommonErrorUtils {
 
