--- a/di-sample-apex-trigger/test/common/classes/CommonTriggerHandlerTest.cls
+++ b/di-sample-apex-trigger/test/common/classes/CommonTriggerHandlerTest.cls
@@ -1,6 +1,6 @@
 /*******************************************************
  * Name: CommonTriggerHandlerTest.cls
- * Description: Test class for CommonTriggerHandler.cls
+ * Description: Test class for CommonTriggerHandler
  ********************************************************/
 @isTest(SeeAllData=false)
 private class CommonTriggerHandlerTest {
@@ -8,7 +8,9 @@ private class CommonTriggerHandlerTest {
   private class CommonTriggerObserverMock implements ITriggerObserver {
 
     private CommonTriggerHandler handler;
+
     public CommonTriggerObserverMock() {}
+
     public ITriggerObserver getTriggerObserver(CommonTriggerHandler handler) {
       this.handler = handler;
       return (ITriggerObserver)this;
@@ -23,15 +25,48 @@ private class CommonTriggerHandlerTest {
     public void onAfterUndelete() {}
   }
 
+  // NOTE: you can use any sObject, such as Account
+  private static final String SOBJECT_NAME_ACCOUNT = Account.class.getName();
+
   @testSetup static void setup() {
-    AccountTestUtils.insertAccounts();
+    CommonTestUtils.insertNormalAccounts();
   }
 
-  @isTest static void onBeforeInsertTest() {}
+  @isTest static void isRecursive_Undelete() {
+    List<Account> accounts = CommonTestUtils.selectAccounts();
 
-  @isTest static void onBeforeUpdateTest() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+    Test.startTest();
+    CommonTestUtils.deleteAccounts(accounts);
+    CommonTestUtils.undeleteAccounts(accounts);
+    Test.stopTest();
+  }
+
+  @isTest static void invoke_BeforeUpdate() {
+    List<Account> accounts = CommonTestUtils.selectAccounts();
+
+    Test.startTest();
+    CommonTestUtils.updateAccounts(accounts);
+    Test.stopTest();
+  }
+
+  @isTest static void invoke_catchException() {
+    Test.startTest();
+    CommonTestUtils.insertAbnormalAccounts();
+    Test.stopTest();
+  }
+
+  @isTest static void onBeforeInsert() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
+    ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
+    handler.beforeInsertObservers.add(triggerObserver);
+
+    Test.startTest();
+    handler.onBeforeInsert();
+    Test.stopTest();
+  }
+
+  @isTest static void onBeforeUpdate() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
     ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
     handler.beforeUpdateObservers.add(triggerObserver);
 
@@ -40,9 +75,8 @@ private class CommonTriggerHandlerTest {
     Test.stopTest();
   }
 
-  @isTest static void onBeforeDeleteTest() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void onBeforeDelete() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
     ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
     handler.beforeDeleteObservers.add(triggerObserver);
 
@@ -51,9 +85,8 @@ private class CommonTriggerHandlerTest {
     Test.stopTest();
   }
 
-  @isTest static void onAfterInsertTest() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void onAfterInsert() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
     ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
     handler.afterInsertObservers.add(triggerObserver);
 
@@ -62,9 +95,8 @@ private class CommonTriggerHandlerTest {
     Test.stopTest();
   }
 
-  @isTest static void onAfterUpdateTest() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void onAfterUpdate() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
     ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
     handler.afterUpdateObservers.add(triggerObserver);
 
@@ -73,9 +105,8 @@ private class CommonTriggerHandlerTest {
     Test.stopTest();
   }
 
-  @isTest static void onAfterDeleteTest() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void onAfterDelete() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
     ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
     handler.afterDeleteObservers.add(triggerObserver);
 
@@ -84,9 +115,8 @@ private class CommonTriggerHandlerTest {
     Test.stopTest();
   }
 
-  @isTest static void onAfterUndeleteTest() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void onAfterUndelete() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
     ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
     handler.afterUndeleteObservers.add(triggerObserver);
 
@@ -95,9 +125,8 @@ private class CommonTriggerHandlerTest {
     Test.stopTest();
   }
 
-  @isTest static void addObserverTest() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void addObserver() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
     ITriggerObserver triggerObserver = (ITriggerObserver)CommonTriggerObserverMock.class.newInstance();
     List<System.TriggerOperation> triggerOperations = new List<System.TriggerOperation>{
       System.TriggerOperation.BEFORE_INSERT,
@@ -114,9 +143,8 @@ private class CommonTriggerHandlerTest {
     Test.stopTest();
   }
 
-  @isTest static void createTriggerObserverTest_NULL() {
-    // List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void createTriggerObserver_NULL() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
 
     Test.startTest();
     ITriggerObserver triggerObserver = handler.createTriggerObserver(null);
@@ -125,19 +153,8 @@ private class CommonTriggerHandlerTest {
     System.assertEquals(null, triggerObserver);
   }
 
-  @isTest static void isRecursiveTest_Undelete() {
-    List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
-
-    Test.startTest();
-    AccountTestUtils.deleteAccounts(accounts);
-    AccountTestUtils.undeleteAccounts(accounts);
-    Test.stopTest();
-  }
-
-  @isTest static void isRecursiveTest_NonFirstRun() {
-    List<Account> accounts = AccountTestUtils.selectAccounts();
-    CommonTriggerHandler handler = new CommonTriggerHandler(Account.class.getName());
+  @isTest static void isRecursive_NonFirstRun() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
 
     Test.startTest();
     CommonTriggerHandler.firstRun = false;
@@ -147,11 +164,12 @@ private class CommonTriggerHandlerTest {
     System.assertEquals(true, isRecursive);
   }
 
-  @isTest static void invokeTest_BeforeUpdate() {
-    List<Account> accounts = AccountTestUtils.selectAccounts();
+  @isTest static void invoke_isRecursive() {
+    CommonTriggerHandler handler = new CommonTriggerHandler(SOBJECT_NAME_ACCOUNT);
 
     Test.startTest();
-    AccountTestUtils.updateAccounts(accounts);
+    CommonTriggerHandler.firstRun = false;
+    handler.invoke();
     Test.stopTest();
   }
 
